// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField snapshots should render TextField 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField TextField--light"
    data-test-text-field=""
  >
    <input
      class="TextField__input TextField__input--light"
      data-test-text-field-input=""
      maxlength="6"
    />
  </div>
</DocumentFragment>
`;

exports[`TextField snapshots should render with chip 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField TextField--light"
    data-test-text-field=""
  >
    <input
      class="TextField__input TextField__input--light"
      data-test-text-field-input=""
      maxlength="6"
    />
    <div
      class="css-1jnxvbp Chip Chip--light TextFieldChip TextFieldChip--light"
      data-test-chip=""
    >
      chip
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField snapshots should render with popover 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField TextField--light"
    data-test-text-field=""
  >
    <input
      class="TextField__input TextField__input--light"
      data-test-text-field-input=""
      maxlength="6"
    />
    <div
      class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextField__icon TextField__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
        data-test-icon="variant"
        height="12"
        name="Variant"
        width="12"
      />
      <div
        class="css-17s20gh Popover Popover--light"
        data-test-box=""
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="css-qef3st"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
